# CallMeMaybe

./: Makefile  README.md  pyproject.toml
data/input/: function_calling_tests.json
data/output/: function_calling_results.json
llm_sdk/llm_sdk/: __init__.py
src/: __main__.py  constrained.py  context.py  fill_response.py  get_llm_response.py  get_next_token.py  models.py  output.py  parser.py  pipeline.py
tests/: test_constrained.py  test_parser.py  test_performance.py  test_pipeline.py
