[project]
name = "v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
